# mpRPC

./: CMakeLists.txt  README.md
example/: user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  mprpcconfig.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: logger.h  mprpcapplication.h  mprpccontroller.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
